# HAI819I_Moteur_de_jeu_Project

./: .gitignore  CMakeLists.txt  README.md
common/: controls.cpp
engine/: engine  main.cpp
engine/3DModels/Asteroids_Group/: license.txt  scene.gltf
engine/Buffers/FBO/: FBO.cpp  FBO.h
engine/Buffers/VAO/: VAO.cpp  VAO.h
engine/Buffers/VBO/: VBO.cpp  VBO.h
engine/Camera/Camera/: Camera.cpp  Camera.h
engine/Camera/EditorCamera/: EditorCamera.cpp  EditorCamera.h
engine/Camera/OrbitalCamera/: OrbitalCamera.cpp  OrbitalCamera.h
engine/Character/: Character.cpp  Character.h
engine/Components/Component/: Component.cpp  Component.h
engine/Components/MeshComponent/: MeshComponent.cpp  MeshComponent.h
engine/Engine/: Engine.cpp  Engine.h
engine/FilesPath/: FilesPath.h
engine/Game/Asteroid/: Asteroid.cpp  Asteroid.h
engine/Game/Collectibles/: Trophy.cpp  Trophy.h
engine/Game/Decor/: Spaceship.cpp  Spaceship.h
engine/Game/Manager/: GameManager.cpp  GameManager.h
engine/Game/Player/: Ground_Player.cpp  Ground_Player.h  Player.cpp  Player.h
engine/Game/Scenes/: SceneMain.cpp  SceneMain.h  Scene_Earth.cpp  Scene_Earth.h  Scene_Mars.cpp  Scene_Mars.h  Scene_Moon.cpp  Scene_Moon.h
engine/Game/Weapon/: Projectile.cpp  Projectile.h
engine/Inputs/InputManager/: InputManager.cpp  InputManager.h
engine/Inputs/MouseManager/: MouseManager.cpp  MouseManager.h
engine/Inputs/Tokens/: InputCoreTokens.h
engine/Inputs/Type/: ACTION_TYPE.h  Axis.h  Key.h
engine/Landscape/Landscape/: Landscape.cpp  Landscape.h
engine/Landscape/Material/: LandscapeMaterial.cpp  LandscapeMaterial.h
engine/Landscape/Mesh/: LandscapeMesh.cpp  LandscapeMesh.h
engine/Landscape/Shader/: Landscape_frag.glsl  Landscape_vertex.glsl
engine/Landscape/ShaderHandler/: LandscapeShaderHandler.cpp  LandscapeShaderHandler.h
engine/Lights/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
engine/Lights/Light/: Light.cpp  Light.h
engine/Lights/LightManager/: LightManager.cpp  LightManager.h
engine/Lights/PointLight/: PointLight.cpp  PointLight.h
engine/Materials/: Material.cpp  Material.h
engine/Materials/BaseMaterial/: BaseMaterial.cpp  BaseMaterial.h
engine/Meshs/Cube/: Cube.cpp  Cube.h
engine/Meshs/Mesh/: Mesh.cpp  Mesh.h
engine/Meshs/Plane/: Plane.cpp  Plane.h
engine/Meshs/Sphere/: Sphere.cpp  Sphere.h
engine/Objects/GameObject/: GameObject.cpp  GameObject.h
engine/Objects/Object/: Object.h
engine/Objects/ObjectManager/: ObjectManager.cpp  ObjectManager.h
engine/Physic/BoxCollider/: BoxCollider.cpp  BoxCollider.h
engine/Physic/Collider/: Collider.cpp  Collider.h
engine/Physic/CollisionData/: CollisionData.cpp  CollisionData.h
engine/Physic/PhysicComponent/: PhysicComponent.cpp  PhysicComponent.h
engine/Physic/PhysicManager/: PhysicManager.cpp  PhysicManager.h
engine/Physic/SphereCollider/: SphereCollider.cpp  SphereCollider.h
engine/Planets/Material/: PlanetMaterial.cpp  PlanetMaterial.h
engine/Planets/Material/EarthMaterial/: EarthMaterial.cpp  EarthMaterial.h
engine/Planets/Material/MoonMaterial/: MoonMaterial.cpp  MoonMaterial.h
engine/Planets/Material/SunMaterial/: SunMaterial.cpp  SunMaterial.h
engine/Planets/Planet/: Planet.cpp  Planet.h
engine/Renderer/: Renderer.cpp  Renderer.h
engine/Scenes/Scene/: Scene.cpp  Scene.h
engine/Scenes/SceneManager/: SceneManager.cpp  SceneManager.h
engine/Scenes/TP1/: SceneTP1.cpp  SceneTP1.h
engine/Scenes/TP2/: SceneTP2.cpp  SceneTP2.h
engine/Scenes/TP3/: SceneTP3.cpp  SceneTP3.h
engine/Scenes/TP4/: SceneTP4.cpp  SceneTP4.h
engine/ShaderHandlers/BaseShaderHandler/: BaseShaderHandler.cpp  BaseShaderHandler.h
engine/ShaderHandlers/PhongShaderHandler/: PhongShaderHandler.cpp  PhongShaderHandler.h
engine/ShaderHandlers/ShaderHandler/: ShaderHandler.cpp  ShaderHandler.h
engine/ShaderHandlers/ShaderManager/: ShaderManager.cpp  ShaderManager.h
engine/Shaders/CustomPBR/: fragment.glsl  vertex.glsl
engine/Shaders/Debug/Colliders/: Collider_frag.glsl  Collider_vertex.glsl
engine/Shaders/Filament/: fragment.glsl  vertex.glsl
engine/Shaders/Phong/: Phong_frag.glsl  Phong_vertex.glsl
engine/Skyboxes/Material/: SkyboxMaterial.cpp  SkyboxMaterial.h
engine/Skyboxes/Mesh/: SkyboxMesh.cpp  SkyboxMesh.h
engine/Skyboxes/Shader/: Skybox_frag.glsl  Skybox_vertex.glsl
engine/Skyboxes/ShaderHandler/: SkyboxShaderHandler.cpp  SkyboxShaderHandler.h
engine/Skyboxes/Skybox/: Skybox.cpp  Skybox.h
engine/Transform/: Transform.cpp  Transform.h
engine/Transform/Material/: TransformMaterial.cpp  TransformMaterial.h
engine/Transform/Mesh/: TransformMesh.cpp  TransformMesh.h
engine/Transform/Shader/: Transform_frag.glsl  Transform_vertex.glsl
engine/Utils/AssimpLoader/: AssimpLoader.cpp  AssimpLoader.h
engine/Utils/Interfaces/: IMoving.h  IRenderable.h  IRotating.h  ITickable.h
engine/Utils/Printer/: Printer.h
engine/Utils/TextureLoader/: TextureLoader.cpp  TextureLoader.h
engine/Windows/: Window.cpp  Window.h
